@@ -4,6 +4,8 @@ Version 0.6.4
 - Reversing stripping of control characters on text from IRC for now.
 - htmlspecialchars_decode text going to IRC to decode &amp; and similar.
 - Updated port for AoC server Ishtar.
+- IRC join/part/quit messages now properly prefixed on IRC and are also relayed over guild relay if UseGuildRelay is set for IRC module.
+- IRC part/quit messages are now relayed ingame.
 
 -------------
 Version 0.6.3
